--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,8 @@ allprojects {
 dependencies {
     // https://mvnrepository.com/artifact/org.apache.spark/spark-core
     implementation group: 'org.apache.spark', name: 'spark-core_2.12', version: '2.4.3'
+// https://mvnrepository.com/artifact/org.scala-lang/scala-library
+    implementation group: 'org.scala-lang', name: 'scala-library', version: '2.11.12'
 
 
     compile 'org.projectlombok:lombok:1.18.12'
