--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     implementation group: 'org.apache.spark', name: 'spark-core_2.12', version: '2.4.3'
 // https://mvnrepository.com/artifact/org.scala-lang/scala-library
     implementation group: 'org.scala-lang', name: 'scala-library', version: '2.11.12'
+// https://mvnrepository.com/artifact/log4j/log4j
+    implementation group: 'log4j', name: 'log4j', version: '1.2.17'
 
 
     compile 'org.projectlombok:lombok:1.18.12'
